# msk-warp

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  pyproject.toml
assets/: ant.xml  cartpole.xml
configs/: ant_shac.yaml  cartpole_shac.yaml
msk_warp/: __init__.py  bridge.py
msk_warp/algorithms/: __init__.py  ppo.py  shac.py
msk_warp/assets/: ant.xml  ant_cfd_probe.xml  ant_phase2a_lowmu.xml  ant_phase2a_softref.xml  ant_phase2a_softref02.xml  ant_phase2a_softref_mild.xml  ant_soft.xml  ant_substeps4.xml  cartpole.xml
msk_warp/configs/: ant_shac.yaml  ant_shac_fd.yaml  ant_shac_nobptt.yaml  ant_shac_phase3a.yaml  ant_shac_phase3a_baseline.yaml  cartpole_shac.yaml  myoleg26_ppo.yaml  myoleg26_shac.yaml  myoleg_shac.yaml
msk_warp/envs/: __init__.py  ant.py  base_env.py  cartpole_swing_up.py  myoleg26_walk.py  myoleg_walk.py
scripts/: diag_contact_state_parity.py  diag_reward_gradient_variants.py  diagnose_ant.py  phase2_gradnorm_trajectory.py  phase4_compare.py  phase4_harness_diffrl.py  phase4_harness_mskwarp.py  phase4_plot_training.py  plot_policy_gradient_diagnostic.py  run_ant_convergence_suite.py  run_ant_ppo_shac_pipeline.py  summarize_cfd_probe.py  test_gradient.py  train.py  train_ppo.py  visualize.py  visualize_progression.py
tests/: test_ant_diff_contact_path.py  test_ant_gradient.py  test_ant_policy_gradient.py  test_ant_reward_curriculum.py  test_ant_rollout_utils.py  test_ant_smooth_adjoint_wiring.py  test_ant_substep_bisection.py  test_contact_state_parity.py  test_diagnose_ant_reward_parity.py  test_diffrl_baseline_contract.py  test_friction_bypass.py  test_friction_surrogate.py  test_grad_chain.py  test_gradient.py  test_ppo_shac_handoff.py  test_reward_gradient_variants.py  test_shac_grad_controls.py  test_shac_init_policy.py  test_smooth_adjoint_training.py  test_tape_debug.py
(+87 files in other folders)
