[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msk-warp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "warp-lang>=1.5",
    "mujoco>=3.2,<3.8.1",
    "mujoco-warp",
    "tensorboardX",
    "pyyaml",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["msk_warp*"]

[tool.setuptools.package-data]
msk_warp = ["assets/*.xml", "configs/*.yaml"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
mujoco-warp = { path = "C:/Projects/mujoco_warp", editable = true }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
